syntax = "proto3";

package inventory;

service InventoryService {
  // Check and (partially) reserve inventory for an order
  rpc CheckAndReserveInventory(InventoryRequest) returns (InventoryResponse);
}

message InventoryRequest {
  string userId = 1;
}

message UpdatedProduct {
  string id = 1;
  int32 requestedQty = 2;
  int32 actualQty = 3;
  int32 availableQty = 4;
  string name = 5;
  double price = 6;
}

message InventoryResponse {
  string status = 1; // "fulfilled" or "partial_fulfillment"
  string message = 2;
  repeated UpdatedProduct products = 3;
}

